@@ -38,7 +38,6 @@ import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
-import java.util.stream.Collectors;
 
 import static org.elasticsearch.cluster.metadata.DataStreamTestHelper.createTimestampField;
 import static org.hamcrest.Matchers.arrayContaining;
@@ -172,7 +171,7 @@ public class ResolveIndexTests extends ESTestCase {
         Metadata.Builder builder = Metadata.builder();
         String dataStreamName = "my-data-stream";
         String[] names = { "not-in-order-2", "not-in-order-1", DataStream.getDefaultBackingIndexName(dataStreamName, 3, epochMillis) };
-        List<IndexMetadata> backingIndices = Arrays.stream(names).map(n -> createIndexMetadata(n, true)).collect(Collectors.toList());
+        List<IndexMetadata> backingIndices = Arrays.stream(names).map(n -> createIndexMetadata(n, true)).toList();
         for (IndexMetadata index : backingIndices) {
             builder.put(index, false);
         }
@@ -180,7 +179,7 @@ public class ResolveIndexTests extends ESTestCase {
         DataStream ds = DataStreamTestHelper.newInstance(
             dataStreamName,
             createTimestampField("@timestamp"),
-            backingIndices.stream().map(IndexMetadata::getIndex).collect(Collectors.toList())
+            backingIndices.stream().map(IndexMetadata::getIndex).toList()
         );
         builder.put(ds);
 
@@ -306,7 +305,7 @@ public class ResolveIndexTests extends ESTestCase {
             DataStream ds = DataStreamTestHelper.newInstance(
                 dataStreamName,
                 createTimestampField(timestampField),
-                backingIndices.stream().map(IndexMetadata::getIndex).collect(Collectors.toList())
+                backingIndices.stream().map(IndexMetadata::getIndex).toList()
             );
             builder.put(ds);
         }
